double scroll fix maybe

--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -27,7 +27,7 @@ body,html{
 }
 
 .main-section, .app-section, .spinner-section { 
-	height: auto;
+	height: 98%;
 }
 
 .off-canvas-wrap, .inner-wrap {
@@ -680,9 +680,10 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 #app-client-container {
 	width: 100%;
 	height: 100%;
-    -webkit-transition: width 0.5s; /* Safari */
+    -webkit-transition: padding 0.5s; /* Safari */
     transition: padding 0.5s;
     visibility: hidden;
+    overflow: hidden;
 }
 
 #app-menu-container {
